deployment/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  selector:
    matchLabels:
      name: auth-pods
  template:
    metadata:
      labels:
        name: auth-pods
    spec:
      containers:
        - name: auth-container
          image: hirasakavizu/authservice
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector: 
    name: auth-pods
  ports:
    - port: 8080
      targetPort: 8080
