deployment/database-psql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-psql-deployment
spec:
  selector:
    matchLabels:
      name: psql-pods
  template:
    metadata:
      labels:
        name: psql-pods
    spec:
      containers:
        - name: container-psql
          image: postgres:latest
---
apiVersion: v1
kind: Service
metadata:
  name: psql-service
spec:
  type: ClusterIP
  selector: 
    name: psql-pods
  ports:
    - port: 5432
      targetPort: 5432
