deployment/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      name: user-pods
  template:
    metadata:
      labels:
        name: user-pods
    spec:
      containers:
        - name: user-container
          image: hirasakavizu/userservice
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector: 
    name: user-pods
  ports:
    - port: 8081
      targetPort: 8081
